# flips.rs

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
ci/travis/: deploy.sh  script.sh
flips-sys/: Cargo.toml  README.md  build.rs
flips-sys/src/: bps.rs  crc32.h  crc32.rs  ips.rs  lib.rs  test_utils.rs  ups.rs
src/: bps.rs  ips.rs  lib.rs  ups.rs
tests/: test_bps.rs  test_ips.rs  test_ups.rs
tests/data/: patch1to2.bps  patch1to2.ips  patch1to2.ups  patch2to1.bps  patch2to1.ips  patch2to1.ups
