[package]
name = "flips-sys"
version = "0.1.0"
authors = ["Martin Larralde <martin.larralde@ens-paris-saclay.fr>"]
edition = "2018"
build = "build.rs"
license = "MIT/GPLv3"

[dependencies]
libc = "0.2.68"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
